Refactor: 사용자 조건 조회 관련 쿼리문 N+1문제 해결 및 성능 향상 #18